cephfs-journal-tool: wait prezero ops before destroying journal

There still can be pending prezero requests after Journal::flush()
return. We should wait until all prezero requests are done, then
destroy the on-stack journaler.

Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
Fixes: http://tracker.ceph.com/issues/20549
(cherry picked from commit 9299a1ceb607199d2ea09662ee1ef280a7b9f920)